eerste uurtje maandag!

--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -35,19 +35,19 @@ This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the f
     \label{tbl:case-decomposed}
 \end{table}
 
-So, the case scale, repeated in \ref{ex:case-scale-derive}, actually indicates containment. Dative corresponds to \tsc{f1}, \tsc{f2} and \tsc{f3}, accusative corresponds to \tsc{f1} and \tsc{f2}, and nominative corresponds to \tsc{f1}.
-Nominative corresponds to a set of features (namely \tsc{f1}) that is contained in the set of features accusative and dative corresponds to (which is respectively \tsc{f1} and \tsc{f2} vs. \tsc{f1}, \tsc{f2} and \tsc{f3}). Accusative corresponds to a set of features (\tsc{f1} and \tsc{f2}) that is contained in the set of features of dative (\tsc{f1}, \tsc{f2} and \tsc{f3}).
+So, the case scale, repeated in \ref{ex:case-scale-derive}, actually indicates containment.
+Nominative corresponds to a set of features (namely \tsc{f1}) that is contained in the set of features of accusative (which is namely \tsc{f1} and \tsc{f2}).
+Similarly, nominative corresponds to a set of features that is contained in the set of features of dative (which is namely vs. \tsc{f1}, \tsc{f2} and \tsc{f3}).
+Lastly, accusative corresponds to a set of features (\tsc{f1} and \tsc{f2}) that is contained in the set of features of dative (\tsc{f1}, \tsc{f2} and \tsc{f3}).
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-derive}
 
-The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive the case scale effects observed in the previous chapter. The next section shows how case containment and syncretism effects follow naturally. Later in this chapter I show how the decomposition also derives the case competition facts in headless relatives.
+The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive the case scale effects observed in the previous chapter. The next sections show how case containment and syncretism effects follow naturally. After that, I show how the decomposition also derives the case competition facts in headless relatives.
 
 
 \section{Deriving syncretism}\label{sec:syncretism}
 
-Start with the observation in terms of the case scale: \ac{nom} < \ac{acc} < \ac{dat}
-
-In this section I show how case syncretism patterns can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows the possible and impossible syncretism patterns in Table \ref{tbl:syncretisms-derive}.
+In sum, case syncretism follows the ordering of the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}. Along this scale, only contiguous regions in the sequence are syncretic. In this section I show how case syncretism patterns can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows the possible and impossible syncretism patterns in Table \ref{tbl:syncretisms-derive}.
 
 \begin{table}[ht]
   \center
@@ -56,16 +56,16 @@ In this section I show how case syncretism patterns can be derived from the case
   \label{tbl:syncretisms-derive}
 \end{table}
 
-The intuition is the following.
+The intuition is the following. Syncretic forms are realized by a single lexical entry from the lexicon. A lexical entry can be applied if it contains all features, as long as there is no more specific one. So, a lexical entry specified for [\tsc{f1}, \tsc{f2}, \tsc{f3}] can also apply to [\tsc{f1}], if there is no other lexical entry. Now, if there is an entry specific for only [\tsc{f1}, \tsc{f2}], blabla
+
+GO THROUGH ALL THE POSSIBILITIES, WITH SETS OF FEATURES
+
+
 
 % If different cases in a paradigm are syncretic, they can be stored as a single form in the lexicon. That is, Dutch only has a single form in its lexicon for \tit{jullie}. This form is carries \tsc{f1}, \tsc{f2} and \tsc{f3} (see Table \ref{tbl:case-decomposed}). In the framework I will be using (Nanosyntax), lexical items apply to feature sets based on containment. \tsc{f1} and \tsc{f2} are contained in the set of \tsc{f1}, \tsc{f2} and \tsc{f3}.
 
 % This last example also illustrates that the laid out system is unable to derive an ABA pattern. The unability of the system to derive such a pattern is a welcome one, since the pattern is unattested cross-linguistically. In an ABA pattern, the nominative and the dative are syncretic, to the exclusion of the accusative. Staying close to the German example, in this hypothetical example, the dative would be \tit{ihr}, the accusative \tit{sie}, and the nominative \tit{ihr} again.
 % This result could never be derived with the lexical entries given in \ref{ex:german-sie-lexicon} and \ref{ex:german-ihr-lexicon}. \tit{Ihr} is inserted for the dative and the cases contained in it (so accusative and nominative), unless a more specific lexical entry is found. \tit{Sie} is the more specific lexical entry that is found from the accusative on. From the accusative on, \tit{sie} will be inserted until a more specific entry is found. If no entry is specified for nominative, \tit{sie} will surface. \tit{Ihr} will not resurface, because the lexical entry for \tit{sie} will remain to be more specific.
-
-%In Nanosyntax (the framework I shall be using in this study), lexical
-% items apply to feature sets not based on identity, but on the basis of a containment
-% relation.
 
  % The morphological form of the pronouns mirror the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. That is, the accusative has the morphology that the nominative has (\tit{luw}) plus something extra (\tit{-e:l}). The dative has the morphology that the accusative has (\tit{luw-e:l}) plus something extra (\tit{luw-e:l}-na). In what follows I make it concrete how syntactic features translate to morphological form.
 
@@ -114,25 +114,27 @@ Instead, a possible syntactic representation for a lexical entry looks as in \re
   ]
 \end{forest}\label{ex:feature-structure}
 
-This structure leads to the concept of phrasal spellout. Phrasal spellout is that not terminals but multiple syntactic heads (phrases) are realized with a single piece of phonology (i.e. a single morpheme). A necessary requirement is that these multiple syntactic heads form a constituent.
+This structure leads to the concept of phrasal spellout: not terminals but multiple syntactic heads (phrases) are realized with a single piece of phonology (i.e. a single morpheme). A necessary requirement is that these multiple syntactic heads form a constituent.
 
-Let me illustrate all of the above with the Faroese pronouns from Table \ref{tbl:syncretisms-derive}. I simplify the situation in two respects. First, I do not show the internal complexity of the pronouns, including person and number features. Instead, I give a triangle, indicating that this is a complex syntactic structure. Second, in this simplified representation I consider the Faroese pronouns to be monomorphemic. I ignore the fact that all three pronouns clearly have the stem \tit{t} with a suffix on it.
+Let me illustrate all of the above with the Faroese pronouns from Table \ref{tbl:syncretisms-derive}. I simplify the situation in two respects. First, I do not show the internal complexity of the pronouns, including person and number features. Instead, I give a triangle, indicating that this is a complex syntactic structure. I refer to is as the person-number phase it refers to, so e.g. \tsc{3sg}P. Second, in this simplified representation I consider the Faroese pronouns to be monomorphemic. I ignore the fact that all three pronouns clearly have the stem \tit{t} with a suffix on it.
 
-The lexical entry for \tit{tú} `3\tsc{sg}.\tsc{nom}' is given in \ref{ex:faroese-tu-lexicon}. The syntactic representation consists of the complex syntactic structure that corresponds to the third person singular pronoun, and \tsc{f}1, making it a \tsc{nom}P. The phonological representation that is linked to the syntactic representation in \tit{tú}.
+The lexical entry for \tit{tú} is given in \ref{ex:faroese-tu-lexicon}. The syntactic representation consists of the complex syntactic structure that corresponds to the third person singular pronoun (the \tsc{3sg}P), and \tsc{f}1, making it a \tsc{nom}P. The phonological representation that is linked to the syntactic representation in \tit{tú}.\footnote{
+Throughout the dissertation, I use syntactic structures and phonological forms connected by a double arrow (⇔) to refer to a lexical entry.
+}
 
 \ex.
 \begin{forest} boom
-  [\ac{nom}P
+  [ [\ac{nom}P
       [\ac{f}1]
       [3\tsc{sg}P
           [\phantom{xxx}, roof]
       ]
   ]
-  {\draw (.east) node[right]{⇔ \tit{tú}}; }
+  {\draw (.east) node[right]{⇔ \tit{tú}}; } ]
 \end{forest}
 \label{ex:faroese-tu-lexicon}
 
-The lexical entry for \tit{teg} `3\tsc{sg}.\tsc{acc}' is given in \ref{ex:faroese-teg-lexicon}. The syntactic representation contains all the features of the syntactic structure in \ref{ex:faroese-tu-lexicon}, plus \tsc{f}2, making it an \tsc{acc}P. The linked phonological representation is \tit{teg}.
+The lexical entry for \tit{teg} is given in \ref{ex:faroese-teg-lexicon}. The syntactic representation contains all the features of the syntactic structure in \ref{ex:faroese-tu-lexicon}, plus \tsc{f}2, making it an \tsc{acc}P. The linked phonological representation is \tit{teg}.
 
 \ex.
 \begin{forest} boom
@@ -149,7 +151,7 @@ The lexical entry for \tit{teg} `3\tsc{sg}.\tsc{acc}' is given in \ref{ex:faroes
 \end{forest}
 \label{ex:faroese-teg-lexicon}
 
-The lexical entry for \tit{tær} `3\tsc{sg}.\tsc{dat}' is given in \ref{ex:faroese-taer-lexicon}. The syntactic representation contains all the features of the syntactic structure in \ref{ex:faroese-teg-lexicon}, plus \tsc{f}3, making it an \tsc{dat}P. The linked phonological representation is \tit{tær}.
+The lexical entry for \tit{tær} is given in \ref{ex:faroese-taer-lexicon}. The syntactic representation contains all the features of the syntactic structure in \ref{ex:faroese-teg-lexicon}, plus \tsc{f}3, making it an \tsc{dat}P. The linked phonological representation is \tit{tær}.
 
 \ex.
 \begin{forest} boom
@@ -171,7 +173,9 @@ The lexical entry for \tit{tær} `3\tsc{sg}.\tsc{dat}' is given in \ref{ex:faroe
 
 This brings me to the part of the discussion about matching. The syntactic structures and their phonological counterparts I gave in \ref{ex:faroese-tu-lexicon} to \ref{ex:faroese-taer-lexicon} are lexical entries. These are matched against the actual syntactic structure that is to be realized.
 Examples of syntactic structures are given in \ref{ex:faroese-tu-spellout} to \ref{ex:faroese-taer-spellout}.
-The syntactic structure in \ref{ex:faroese-tu-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-tu-lexicon}. Therefore, this syntactic structure is spelled out as \tit{tu}. Throughout this dissertation I circle the part of the structure that corresponds to a particular lexical entry, and I place corresponding the phonology next to it.
+The syntactic structure in \ref{ex:faroese-tu-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-tu-lexicon}. Therefore, this syntactic structure is spelled out as \tit{tu}.\footnote{
+Throughout this dissertation I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
+}
 
 \ex. \begin{forest} boom
 [\tsc{nomP},
@@ -241,7 +245,8 @@ A lexically stored tree matches a syntactic node iff the lexically stored tree c
 \label{ex:superset-principle}
 
 Let me illustrate this with the Dutch second person plural pronoun from Table \ref{tbl:syncretisms-derive}. This pronoun is syncretic between between the nominative, accusative and dative.
-The lexicon only contains a single lexical entry, namely \ref{ex:dutch-jullie-lexicon}. The nominative, the accusative and the dative can all be spelled out with this lexical entry.
+The lexicon only contains a single lexical entry, namely \ref{ex:dutch-jullie-lexicon}. The syntactic representation consists of the complex syntactic structure that corresponds to the second person plural pronoun (the \tsc{2pl}P), and \tsc{f}1, \tsc{f2} and \tsc{f3} making it a \tsc{dat}P. The phonological representation that is linked to the syntactic representation in \tit{jullie}.
+The nominative, the accusative and the dative can all be spelled out with this lexical entry.
 
 \ex.
 \begin{forest} boom
@@ -285,8 +290,23 @@ fit to=tree]{};
 \end{forest}
 \label{ex:dutch-jullie-spellout-dat}
 
-The syntactic structure of the accusative second person plural is given in \ref{ex:dutch-jullie-spellout-acc}. This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, the syntactic structure in the lexical entry contains the syntactic structure of the accusative.
-I repeated the lexical entry for \tit{jullie} in \ref{ex:dutch-jullie-lexicon-acc}, marking the subpart of the tree that matches the syntactic structure in gray.
+The syntactic structure of the accusative is given in \ref{ex:dutch-jullie-spellout-acc-empty}.
+
+\ex. \begin{forest} boom
+[\tsc{accP}
+    [\tsc{f2}]
+    [\tsc{nom}P
+        [\tsc{f1}]
+        [2\tsc{pl}P
+            [\phantom{xxx}, roof]
+        ]
+    ]
+]
+\end{forest}
+\label{ex:dutch-jullie-spellout-acc-empty}
+
+This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, the syntactic structure in the lexical entry contains the syntactic structure of the accusative.
+I repeat the lexical entry for \tit{jullie} in \ref{ex:dutch-jullie-lexicon-acc}, marking the subpart of the tree that matches the syntactic structure in gray.
 
 \ex. \begin{forest} boom
   [\tsc{datP}
@@ -332,9 +352,26 @@ fit to=tree]{};
 \end{forest}
 \label{ex:dutch-jullie-spellout-acc}
 
+The same holds for the nominative. The syntactic structure is given in \ref{ex:dutch-jullie-spellout-nom-empty}.
 
+\ex.
+\begin{forest} boom
+[\tsc{nomP},
+tikz={
+\node[label=below:\tit{jullie},
+draw,circle,
+scale=0.8,
+fit to=tree]{};
+}
+    [\tsc{f1}]
+    [2\tsc{pl}P
+        [\phantom{xxx}, roof]
+    ]
+]
+\end{forest}
+ \label{ex:dutch-jullie-spellout-nom-empty}
 
-The same holds for the nominative second person plural. The syntactic structure is given in \ref{ex:dutch-jullie-spellout-acc}. This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, again, the syntactic structure in the lexical entry contains the syntactic structure of the nominative.
+This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, again, the syntactic structure in the lexical entry contains the syntactic structure of the nominative.
 I repeated the lexical entry for \tit{jullie} in \ref{ex:dutch-jullie-lexicon-nom}, marking the subpart of the tree that matches the syntactic structure in gray.
 
  \ex. \begin{forest} boom
@@ -379,26 +416,25 @@ fit to=tree]{};
 \end{forest}
  \label{ex:dutch-jullie-spellout-nom}
 
-
-A question arises at this point. Why is the accusative and nominative in Faroese not spelled out by the lexical entry for the dative (and why is the nominative not spelled out by the lexical entry for the accusative)? These syntactic structures are namely contained in the lexical entry for the dative (and the accusative).
-The reason for that comes from how competition between lexical entries is regulated. When two lexical entries compete, the best fit wins. The best fit is the lexical entry with the least unused features. This is formalized as in \ref{ex:elsewhere-condition}.
+A question arises at this point. Why are the accusative and nominative in Faroese not spelled out by the lexical entry for the dative (and why is the nominative not spelled out by the lexical entry for the accusative)? These syntactic structures are namely contained in the lexical entry for the dative (and the accusative).
+The reason for that comes from how competition between lexical entries is regulated in Nanosyntax. When two lexical entries compete, the best fit wins. The best fit is the lexical entry with the least unused features. This is formalized as in \ref{ex:elsewhere-condition}.
 
 \ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2020a}):\\
 When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
 \label{ex:elsewhere-condition}
 
-Let me come back to the Faroese examples. Consider first again the syntactic structure in \ref{ex:faroese-tu-spellout}.
+I show how the Superset Principle and the Elswhere Condition interact in a competition with the Faroese lexical entries.
+Consider first again the syntactic structure for the nominative in \ref{ex:faroese-tu-spellout}.
 All the Faroese lexical entries \ref{ex:faroese-tu-lexicon}, \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} contain the syntactic structure for it.
-\ref{ex:faroese-taer-lexicon} has two unused features: \tsc{f2} and \tsc{f3}. \ref{ex:faroese-teg-lexicon} has one unused feature: \tsc{f2}. Only \ref{ex:faroese-tu-lexicon} does not have any unused features, hence is wins the competition over the other two.
+\ref{ex:faroese-taer-lexicon} has two unused features: \tsc{f2} and \tsc{f3}. \ref{ex:faroese-teg-lexicon} has one unused feature: \tsc{f2}. \ref{ex:faroese-tu-lexicon} has the least amount of unused features (namely zero), so it wins the competition over the other two.
 
-Regarding the syntactic structure \ref{ex:faroese-teg-spellout}, the lexical entries \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} contain the syntactic structure.
-\ref{ex:faroese-tu-lexicon} is not even a candidate here, because it does not contain the syntactic structure (it lacks \tsc{f2}.)
-Only \ref{ex:faroese-taer-lexicon} does not have any unused features, and it is inserted.
+Regarding the syntactic structure for the accusative in \ref{ex:faroese-teg-spellout}, the lexical entries \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} contain the syntactic structure.
+\ref{ex:faroese-tu-lexicon} is not a candidate here, because it does not contain the syntactic structure (i.e. it lacks \tsc{f2}). \ref{ex:faroese-taer-lexicon} has fewer unused features than \ref{ex:faroese-teg-spellout}, so it wins.
 
-The Table in \ref{tbl:syncretisms-derive} contains two more attested patterns: the ABB in Icelandic and the AAB in German. In the remainder of this section I show how these two patterns are derived. I also how the system is unable to derive an ABA, which is a pattern unattested crosslinguistically.
+Table \ref{tbl:syncretisms-derive} contains two more attested patterns: the ABB in Icelandic and the AAB in German. In the remainder of this section I show how these two patterns are derived. I also how the system is unable to derive an ABA, which is crosslinguistically unattested.
 
-Let us first consider the Icelanic pattern. For the first person plural, Icelandic has \tit{við} for the nominative and \tit{okkur} for the accusative and dative. Two lexical entries are needed for that. The first one in \ref{ex:icelandic-vid-lexicon} contain pronominal syntactic structure and \tsc{f}1, and corresponds to the phonology \tit{við}.
-The second one is given in \ref{ex:icelandic-okkur-lexicon}. It contains in addition to what \ref{ex:icelandic-vid-lexicon} the features \tsc{f}2 and \tsc{f}3.
+Consider the Icelanic pattern. For the first person plural, Icelandic uses \tit{við} as nominative and \tit{okkur} as accusative and dative. Two lexical entries are needed for that. The first one in \ref{ex:icelandic-vid-lexicon} contain pronominal syntactic structure and \tsc{f}1, and corresponds to the phonology \tit{við}.
+The second one is given in \ref{ex:icelandic-okkur-lexicon}. It contains in addition to \ref{ex:icelandic-vid-lexicon} also the feature \tsc{f}2 and \tsc{f}3. The phonological representation that is linked to it is \tit{okkur}.
 
 \ex.
 \a.
@@ -430,7 +466,8 @@ The second one is given in \ref{ex:icelandic-okkur-lexicon}. It contains in addi
 \end{forest}
 \label{ex:icelandic-okkur-lexicon}
 
-The syntactic structure in \ref{ex:icelandic-okkur-spellout-dat} is contained in the syntactic structure of the lexical entry \ref{ex:icelandic-okkur-lexicon}, and therefore, spelled out as \tit{okkur}.
+The syntactic structure for the dative is given in \ref{ex:icelandic-okkur-spellout-dat}. It is contained in the syntactic structure of the lexical entry \ref{ex:icelandic-okkur-lexicon}, and therefore, spelled out as \tit{okkur}.
+The lexical entry in \ref{ex:icelandic-vid-lexicon} is not considered, because it does not contain \tsc{f2} and \tsc{f3}.
 
 \ex. \begin{forest} boom
 [\tsc{datP},
@@ -454,7 +491,8 @@ fit to=tree]{};
 \end{forest}
 \label{ex:icelandic-okkur-spellout-dat}
 
-The syntactic structure in \ref{ex:icelandic-okkur-spellout-acc} is contained in the syntactic structure of the lexical entry \ref{ex:icelandic-okkur-lexicon}, and therefore, spelled out as \tit{okkur}.
+The syntactic structure for the accusative is given in \ref{ex:icelandic-okkur-spellout-acc}. It is contained in the syntactic structure of the lexical entry \ref{ex:icelandic-okkur-lexicon}, and therefore, spelled out as \tit{okkur}.
+The lexical entry in \ref{ex:icelandic-vid-lexicon} is not considered, because it does not contain \tsc{f2}.
 
 \ex. \begin{forest} boom
 [\tsc{accP},
@@ -475,7 +513,7 @@ fit to=tree]{};
 \end{forest}
 \label{ex:icelandic-okkur-spellout-acc}
 
-The syntactic structure in \ref{ex:icelandic-vid-spellout} is contained in the syntactic structure of the lexical entry \ref{ex:icelandic-vid-lexicon} and in \ref{ex:icelandic-okkur-lexicon}.
+The syntactic structure for the nominative is given in \ref{ex:icelandic-vid-spellout}. It is is contained in the syntactic structure of the lexical entry \ref{ex:icelandic-vid-lexicon} and in \ref{ex:icelandic-okkur-lexicon}.
 The former, \ref{ex:icelandic-vid-lexicon}, has no unused features. The latter, \ref{ex:icelandic-okkur-lexicon}, has two unused features: \tsc{f}2 and \tsc{f}3.
 Therefore, \ref{ex:icelandic-okkur-lexicon} wins the competition, and the syntactic structure is spelled out as \tit{við}.
 
@@ -495,11 +533,9 @@ fit to=tree]{};
 \end{forest}
 \label{ex:icelandic-vid-spellout}
 
-
-
-For the third person singular feminine, German uses \tit{sie} for nominative and accusative, and \tit{ihr} for dative. Two lexical entries are needed for that.
-The first one in \ref{ex:german-sie-lexicon} contains pronominal syntactic structure, \tsc{f}1 and \tsc{f}2, and corresponds to the phonology \tit{sie}.
-The second one is given in \ref{ex:german-ihr-lexicon}. It contains in addition to what \ref{ex:german-sie-lexicon} the feature \tsc{f}3.
+For the third person singular feminine, German uses \tit{sie} as nominative and accusative, and \tit{ihr} as dative. Two lexical entries are needed for that.
+The first one in \ref{ex:german-sie-lexicon} contains pronominal syntactic structure, \tsc{f}1 and \tsc{f}2. It corresponds to the phonology \tit{sie}.
+The second one is given in \ref{ex:german-ihr-lexicon}. It contains in addition to \tit{sie} in \ref{ex:german-sie-lexicon} also the feature \tsc{f}3. It corresponds to the phonology \tit{ihr}.
 
 \ex.
 \a.
@@ -534,7 +570,8 @@ The second one is given in \ref{ex:german-ihr-lexicon}. It contains in addition 
 \end{forest}
 \label{ex:german-ihr-lexicon}
 
-The syntactic structure in \ref{ex:german-ihr-spellout} is contained in the syntactic structure of the lexical entry \ref{ex:german-ihr-lexicon}, and therefore, spelled out as \tit{ihr}.
+The syntactic structure for the dative is given in \ref{ex:german-ihr-spellout}. It is contained in the syntactic structure of the lexical entry \ref{ex:german-ihr-lexicon}, and therefore, spelled out as \tit{ihr}.
+The lexical entry in \ref{ex:icelandic-sie-lexicon} is not considered, because it does not contain \tsc{f3}.
 
 \ex. \begin{forest} boom
 [\tsc{datP},
@@ -558,7 +595,7 @@ fit to=tree]{};
 \end{forest}
 \label{ex:german-ihr-spellout}
 
-The syntactic structure in \ref{ex:german-sie-spellout-acc} is contained in the syntactic structure of the lexical entry \ref{ex:german-sie-lexicon} and in \ref{ex:german-ihr-lexicon}.
+The syntactic structure for the accusative is given in \ref{ex:german-sie-spellout-acc}. It is contained in the syntactic structure of the lexical entry \ref{ex:german-sie-lexicon} and in \ref{ex:german-ihr-lexicon}.
 The former, \ref{ex:german-sie-lexicon}, has one no unused features. The latter, \ref{ex:german-ihr-lexicon}, has one unused feature: \tsc{f}3.
 Therefore, \ref{ex:german-sie-lexicon} wins the competition, and the syntactic structurer is spelled out as \tit{sie}.
 
@@ -581,7 +618,7 @@ fit to=tree]{};
 \end{forest}
 \label{ex:german-sie-spellout-acc}
 
-The syntactic structure in \ref{ex:german-sie-spellout-nom} is contained in the syntactic structure of the lexical entry \ref{ex:german-sie-lexicon} and in \ref{ex:german-ihr-lexicon}.
+The syntactic structure for the nominative is given in \ref{ex:german-sie-spellout-nom}. It is contained in the syntactic structure of the lexical entry \ref{ex:german-sie-lexicon} and in \ref{ex:german-ihr-lexicon}.
 The former, \ref{ex:german-sie-lexicon}, has one unused feature: \tsc{f}2. The latter, \ref{ex:german-ihr-lexicon}, has two unused features: \tsc{f}2 and \tsc{f}3. Therefore, \ref{ex:german-sie-lexicon} wins the competition, and the syntactic structurer is spelled out as \tit{sie}.
 
 \ex. \begin{forest} boom
@@ -600,8 +637,11 @@ fit to=tree]{};
 \end{forest}
 \label{ex:german-sie-spellout-nom}
 
-This last example also illustrates that the laid out system is unable to derive an ABA pattern. The unability of the system to derive such a pattern is a welcome one, since the pattern is unattested cross-linguistically. In an ABA pattern, the nominative and the dative are syncretic, to the exclusion of the accusative. Staying close to the German example, in this hypothetical example, the dative would be \tit{ihr}, the accusative \tit{sie}, and the nominative \tit{ihr} again.
+This last example also illustrates that the laid out system is unable to derive an ABA pattern. The unability of the system to derive such a pattern is a welcome one, since the pattern is unattested cross-linguistically. In an ABA pattern, the nominative and the dative are syncretic, to the exclusion of the accusative. Such a language would be like German but then the nominative would be \tit{ihr} instead of \tit{sie}.
+
 This result could never be derived with the lexical entries given in \ref{ex:german-sie-lexicon} and \ref{ex:german-ihr-lexicon}. \tit{Ihr} is inserted for the dative and the cases contained in it (so accusative and nominative), unless a more specific lexical entry is found. \tit{Sie} is the more specific lexical entry that is found from the accusative on. From the accusative on, \tit{sie} will be inserted until a more specific entry is found. If no entry is specified for nominative, \tit{sie} will surface. \tit{Ihr} will not resurface, because the lexical entry for \tit{sie} will remain to be more specific.
+
+To summarize, xxxx
 
 
 \section{Deriving case containment}
@@ -649,8 +689,8 @@ fit to=tree]{};
 ]
 \end{forest}\label{ex:khanty-luw-spellout}
 
-In the previous section I only gave examples in which the forms were syncretic or suppletive (i.e. formally unrelated). The examples from Khanty are different. The accusative pronoun formally contains the nominative pronoun. This can be modeled by letting \tsc{nom}P still be realized by the lexical entry for the nominative, and giving the accusative its own realization.\footnote{
-Note that it is crucial here to have a theory in which the accusative contains the nominative. If not, it would be a surprise that the nominative is contained in the accusative.
+In the previous section I only gave examples in which the forms were syncretic (i.e. formally identical) or suppletive (i.e. formally unrelated). All features were always spelled out by a single lexical entry. The examples from Khanty are different. The accusative pronoun formally contains the nominative pronoun. This can be modeled by letting the \tsc{nom}P contained in the \tsc{acc}P be realized by the same \tsc{nom}P that is spelled out in the nominative. \tsc{f2} has their own realization that builds upon the nominative (and so does \tsc{f3} on top of the accusative).\footnote{
+Note that it is crucial here to have a theory in which the features that form an accusative contain the features that form a nominative. If not, it would be a surprise that the nominative form is contained in the accusative form. The same holds for the accusative and dative.
 }
 
 Accordingly, I give the lexical entry for the accusative marker \tit{-e:l} in \ref{ex:khanty-el-lexicon}.
