--- a/details.tex
+++ b/details.tex
@@ -43,3 +43,13 @@ adjectives
 so, these things are suffixes, they have to be
 
 following that.. blablabla
+
+
+\subsection{Grafting story}
+
+\subsection{Deleted head story}
+
+argument for this: languages like Polish do not have a morpheme like this that can be deleted.
+so first the morpheme has to be there and then it can be deleted
+
+how would this work in the grafting stor? how could polish be excluded?
